<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView_Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_Nombre" />

    <EditText
        android:id="@+id/editText_Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/editText_Nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_Apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_Apellido" />

    <EditText
        android:id="@+id/editText_Apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:focusable="auto"
        android:hint="@string/editText_Apellido"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_Base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_Base" />

    <EditText
        android:id="@+id/editText_Base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:enabled="false"
        android:hint="@string/editText_Base"

        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_Exponete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_Exponente"
        android:enabled="false"/>

    <EditText
        android:id="@+id/editText_Exponente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/editText_Exponente"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_Factorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_Factorial" />

    <EditText
        android:id="@+id/editTextFactorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/editText_Factorial"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_Potencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_Potencia" />

    <EditText
        android:id="@+id/editText_Potencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/editText_Potencia"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_Siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="true"
        android:onClick="Siguiente"
        android:text="@string/button_siguiente" />

    <Button
        android:id="@+id/button_mostrarActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/button_mostrarActividad" />
</LinearLayout>