<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Segunda_Actividd">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_Nombre" />

    <EditText
        android:id="@+id/editText_INombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_INombre"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_Base" />

    <EditText
        android:id="@+id/editText_IBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_IBase"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button_SiguienteD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Siguiente"
        android:text="@string/button_siguienteD" />

    <Button
        android:id="@+id/button_Cerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Cerrar"
        android:text="@string/button_cerrarD" />
</LinearLayout>